[gd_scene load_steps=17 format=2]

[ext_resource path="res://entities/player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://media/fonts/tiny.fnt" type="BitmapFont" id=2]
[ext_resource path="res://media/fonts/score-fonts.fnt" type="BitmapFont" id=3]
[ext_resource path="res://media/fonts/counter-fonts.fnt" type="BitmapFont" id=4]
[ext_resource path="res://media/fonts/calcu-fonts.fnt" type="BitmapFont" id=5]
[ext_resource path="res://media/recruto7.png" type="Texture" id=6]
[ext_resource path="res://media/player_aspone.png" type="Texture" id=7]
[ext_resource path="res://AnimationPlayer.gd" type="Script" id=8]
[ext_resource path="res://media/fonts/abc-fonts.fnt" type="BitmapFont" id=9]
[ext_resource path="res://media/fonts/extra-fonts.fnt" type="BitmapFont" id=10]
[ext_resource path="res://entities/car.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/amigo.tscn" type="PackedScene" id=12]
[ext_resource path="res://media/dortor2.png" type="Texture" id=13]

[sub_resource type="OpenSimplexNoise" id=1]
octaves = 1
period = 0.1
persistence = 0.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=2]
flags = 0
seamless = true
as_normalmap = true
bump_strength = 1.2
noise = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[node name="Fonts" type="Node2D"]

[node name="player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 142.271, 349.096 )

[node name="car" parent="." instance=ExtResource( 11 )]
position = Vector2( 375.816, 432.987 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.694118, 0.423529, 0.447059 )
position = Vector2( 1209.91, 75.2219 )
scale = Vector2( 5, 5 )
z_index = -4096
texture = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 101.105
margin_top = 135.086
margin_right = 150.105
margin_bottom = 302.086
text = "tiny

score

counter

calcu

abc1


extra"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiny" type="Label" parent="Label"]
margin_top = 15.0
margin_right = 40.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "0123456789 ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="Label"]
margin_top = 49.0
margin_right = 223.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = "0123456789 ."

[node name="counter" type="Label" parent="Label"]
margin_top = 83.0
margin_right = 55.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 4 )
text = "0123456789 ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="calcu" type="Label" parent="Label"]
margin_top = 117.0
margin_right = 77.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 5 )
text = "0123456789 ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="abc1" type="Label" parent="Label"]
margin_top = 151.0
margin_right = 40.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 9 )
text = "abcdefghijklmnopqrstuvwxyz
1234567890 ,.!?-áãéíóõúç"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="extra" type="Label" parent="Label"]
margin_top = 201.0
margin_right = 224.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 10 )
text = "123456789. extra-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
"anims/New Anim" = SubResource( 3 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 462.251, 184.415 )
texture = ExtResource( 7 )
hframes = 10
vframes = 12
frame = 1

[node name="Sprite2" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 558.144, 184.471 )
texture = ExtResource( 6 )
hframes = 10
vframes = 5
frame = 1

[node name="Sprite3" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 462.251, 280.415 )
texture = ExtResource( 7 )
hframes = 10
vframes = 12
frame = 4

[node name="Sprite4" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 558.144, 280.471 )
texture = ExtResource( 6 )
hframes = 10
vframes = 5
frame = 4

[node name="Sprite5" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 654.251, 184.415 )
texture = ExtResource( 13 )
hframes = 10
vframes = 7
frame = 1

[node name="Sprite6" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 654.251, 280.471 )
texture = ExtResource( 13 )
hframes = 10
vframes = 7
frame = 1

[node name="amigo2" parent="." instance=ExtResource( 12 )]
position = Vector2( 218.972, 378.032 )

[node name="amigo3" parent="." instance=ExtResource( 12 )]
position = Vector2( 284.007, 381.595 )

[node name="amigo4" parent="." instance=ExtResource( 12 )]
position = Vector2( 389.133, 380.704 )

[node name="amigo5" parent="." instance=ExtResource( 12 )]
position = Vector2( 351.405, 378.032 )

[node name="amigo6" parent="." instance=ExtResource( 12 )]
position = Vector2( 416.44, 381.595 )

[node name="amigo7" parent="." instance=ExtResource( 12 )]
position = Vector2( 521.566, 380.704 )

[node name="amigo8" parent="." instance=ExtResource( 12 )]
position = Vector2( 249.696, 374.854 )

[node name="amigo9" parent="." instance=ExtResource( 12 )]
position = Vector2( 314.731, 378.417 )

[node name="amigo10" parent="." instance=ExtResource( 12 )]
position = Vector2( 419.857, 377.526 )

[node name="amigo11" parent="." instance=ExtResource( 12 )]
position = Vector2( 382.129, 374.854 )

[node name="amigo12" parent="." instance=ExtResource( 12 )]
position = Vector2( 447.164, 378.417 )

[node name="amigo13" parent="." instance=ExtResource( 12 )]
position = Vector2( 552.29, 377.526 )
